--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "counterwallet",
-  "description": "Counterwallet",
+  "name": "counterwallet-monaparty",
+  "description": "Counterwallet for Monaparty",
   "author": "Counterparty development team",
   "license": "(CDDL-1.0)",
   "version": "1.8.0",
   "main": "build/index.html",
-  "repository": { 
-    "type" : "git",
-    "url" : "https://github.com/CounterpartyXCP/counterwallet.git"
-  },
-  "dependencies": {
-    "cryptojs": "2.5.3",
-    "mocha": "1.18.2",
-    "transifex": "1.4.2"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/monaparty/counterwallet.git"
   },
   "devDependencies": {
-    "grunt": "0.4.1",
-    "grunt-usemin": "2.1.x",
-    "grunt-contrib-copy": "0.4.x",
-    "uglify-js": "1.3.5",
-    "clean-css": "2.1.8",
+    "bower": "^1.8.2",
     "chai": "=1.9.1",
+    "clean-css": "2.1.8",
+    "cryptojs": "2.5.3",
+    "grunt": "^1.0.1",
     "grunt-chrome-compile": "0.2.2",
-    "mocha-phantomjs": "4.x"
+    "grunt-contrib-copy": "0.4.x",
+    "grunt-usemin": "2.1.x",
+    "mocha": "1.18.2",
+    "mocha-phantomjs": "^4.1.0",
+    "transifex": "1.4.2",
+    "uglify-js": "1.3.5"
   },
   "scripts": {
+    "bower": "cd src && bower",
     "prepublish": "grunt",
     "test": "./node_modules/mocha-phantomjs/bin/mocha-phantomjs test/test.html --ignore-ssl-errors=true --ignore-resource-errors --ssl-protocol=any # phantomjs has issues with counterwallet.io SSL cert"
   },
