--- a/counterwallet.conf.json.example
+++ b/counterwallet.conf.json.example
@@ -1,5 +1,5 @@
 {
     "servers": [],
-    "AVAILABLE_LANGUAGES": ["en", "zh_cn", "zh_tw", "ru", "cs", "da"],
+    "AVAILABLE_LANGUAGES": ["en", "zh-cn", "zh-tw", "ru", "cs", "da"],
     "DEFAULT_LANGUAGE": "en"
 }
